# Conan

HelloProjectTrunk/Hello/: Build.bat
HelloProjectTrunk/Hello/Jenkins/: JenkinsfileBuild
HelloProjectTrunk/Hello/Src/: CMakeLists.txt  conanfile.py
HelloProjectTrunk/Hello/Src/Hello/: CMakeLists.txt  Hello.cpp
HelloProjectTrunk/Hello/Src/HelloDll/: CMakeLists.txt  conanfile.py  hellodll.cpp  hellodll.h
